# backtest-lab

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  README.md  cli.py  pyproject.toml
.github/workflows/: ci.yml
bias/: __init__.py  lookahead_guard.py  overfit_detector.py  rademacher.py  sharpe_inference.py  sharpe_statistics.py  walk_forward.py
bridges/: __init__.py  aah_bridge.py  committee_bridge.py  fund_tracker_bridge.py  kb_risk_bridge.py  portfolio_lab_bridge.py  redflag_bridge.py
btconfig/: __init__.py  run_config.py  runner.py  yaml_loader.py
data/: __init__.py  bloomberg_provider.py  ib_provider.py  provider.py  provider_factory.py  ticker_map.py  yahoo_provider.py
engine/: __init__.py  backtest.py
examples/: momentum_backtest.py
examples/configs/: composite_pod_style.yaml  ls_with_risk.yaml  mean_reversion.yaml  momentum_basic.yaml
execution/: __init__.py  borrow.py  commission.py  fill_model.py  slippage.py
regime/: __init__.py  adapter.py  detector.py  hmm_detector.py
reports/: __init__.py  charts.py  markdown_tearsheet.py  tearsheet.py
risk/: __init__.py  benchmark.py  drawdown_control.py  exposure_limits.py  position_sizer.py  risk_decomposition.py  risk_manager.py  stop_loss.py  vol_target.py
signals/: __init__.py  base.py  momentum.py
tests/: test_benchmark.py  test_bias.py  test_borrow.py  test_bridges.py  test_cli.py  test_commission.py  test_engine.py  test_engine_integration.py  test_fill_model.py  test_hmm_detector.py  test_markdown_tearsheet.py  test_regime.py  test_risk.py  test_risk_decomposition.py  test_run_config.py  test_run_log.py  test_runner.py  test_sharpe_inference.py  test_signals.py  test_sizing.py  test_slippage.py  test_tearsheet.py  test_ticker_map.py  test_vol_target.py
ui/: __init__.py  streamlit_app.py  tui.py
