[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "backtest-lab"
version = "1.0.0"
description = "Event-driven backtesting engine with execution realism, enforced risk management, and look-ahead bias prevention."
requires-python = ">=3.11"
license = {text = "MIT"}

dependencies = [
    "bds-data-providers @ git+https://github.com/bdschi1/financial-data-providers.git",
    "polars>=1.0",
    "pyarrow>=14.0",
    "yfinance>=0.2.30",
    "pydantic>=2.0",
    "numpy>=1.24",
    "matplotlib>=3.7",
    "scipy>=1.11",
]

[project.optional-dependencies]
bloomberg = ["blpapi>=3.19"]
ibkr = ["ib_insync>=0.9.86"]
full = ["tiktoken>=0.5", "tenacity>=8.0"]
dev = ["pytest>=7.0", "pytest-cov>=4.0", "ruff>=0.1", "pyyaml>=6.0"]
yaml = ["pyyaml>=6.0"]
streamlit = ["streamlit>=1.30"]
tui = ["questionary>=2.0"]
ui = ["pyyaml>=6.0", "streamlit>=1.30", "questionary>=2.0"]

[project.scripts]
backtest-lab = "cli:main"

[tool.hatch.build.targets.wheel]
packages = ["bias", "bridges", "btconfig", "data", "engine", "execution", "regime", "reports", "risk", "signals", "ui"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.ruff]
line-length = 100
target-version = "py311"
